Fixed some layout issues with navigation bar

--- a/css/styles.css
+++ b/css/styles.css
@@ -63,7 +63,7 @@ footer {
 	color: #bbb;
 	text-transform: uppercase;
 	font-weight: 300;
-	line-height: 24px;
+	line-height: 36px;
 	*height: auto
 }
 #topbar .ink-navigation ul.black li a:hover {
